[package]
name = "rustils"
version = "0.0.9dev"
authors = ["norabx <norabxnetwork@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NorabX/rustils"
documentation = "https://docs.rs/rustils/"
description = "Utilities for rust"

[dependencies]
rand = "0.3"
regex = "0.1"

[[bin]]
doc = false
name = "rustils"
